--- a/src/app/components/Headers/index.css
+++ b/src/app/components/Headers/index.css
@@ -5,7 +5,7 @@
 
 .image-header {
   display: block;
-  margin-top: -150px;
+  margin-top: -8em;
   width: 100%;
   height: auto;
   overflow: hidden;
