feature: add search bar

--- a/src/app/components/Headers/index.css
+++ b/src/app/components/Headers/index.css
@@ -3,6 +3,12 @@
   margin-bottom: 20px;
 }
 
+.header-flex {
+  display: flex;
+  height: 55px;
+  margin-bottom: 20px;
+}
+
 .image-header {
   display: block;
   margin-top: -8em;
