--- a/src/app/components/Headers/index.css
+++ b/src/app/components/Headers/index.css
@@ -11,7 +11,7 @@
 
 .image-header {
   display: block;
-  margin-top: -8em;
+  align-self: center;
   width: 100%;
   height: auto;
   overflow: hidden;
